# eta-coser

./: 30_eta-coser.conf  README.md  Xsetup.modified  eta-coser-wrapper.sh  eta-coser.cpp  eta-coser.h  eta-coser.pro  images.qrc  main.cpp
debian/: changelog  control  copyright  eta-coser.postinst  eta-coser.postrm
etacoser/: .gitignore  CMakeLists.txt  etacoser.cpp  etacoser.h  etacoser.pro  main.cpp
etacoser/usr/share/eta-coser/: config.ini
etacoserscript/: setup.sh
etacoserscript/etc/kde4/kdm/: Xsetup
etacoserscript/usr/share/eta-coser/: config.ini
